crates/weft-snapshots/tests/snapshots/lit-js/example-select.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-select as lit-js
---
import { LitElement, html } from "lit";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Locale"
      ><label
        ><span aria-hidden="true">Country</span>${(() => {
          const _o = [
            { value: "pt", el: html`<option data-weft-id="c-pt" ?selected=${"pt" === _text(data?.country)} value="pt">Portugal</option>` },
            { value: "es", el: html`<option data-weft-id="c-es" ?selected=${"es" === _text(data?.country)} value="es">Spain</option>` },
          ];
          return html`<select data-weft-id="country" aria-label="Country" .value=${_text(data?.country)} @change=${(_e) => { const _c = _o.find((_x) => _text(_x.value) === _e.currentTarget.value); onChange?.("$.country", _c ? _c.value : _e.currentTarget.value); _act(actions, { id: "country", action: "profile.update" }); }}>${_o.map((_x) => _x.el)}</select>`;
        })()}</label
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
