crates/weft-snapshots/tests/snapshots/lit-js/example-stack.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-stack as lit-js
---
import { LitElement, html } from "lit";
import { styleMap } from "lit/directives/style-map.js";

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Actions"
      ><div data-weft-id="actions" style=${styleMap({ gap: "var(--weft-space-md)", display: "flex", flexDirection: "row", alignItems: "flex-end" })}
        ><button data-weft-id="save" type="button" data-variant="primary" @click=${(_e) => _act(actions, { id: "save", action: "doc.save" })}>Save</button
        ><button data-weft-id="discard" type="button" @click=${(_e) => _act(actions, { id: "discard", action: "doc.discard" })}>Discard</button
      ></div
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
