crates/weft-snapshots/tests/snapshots/lit-js/example-stepper.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-stepper as lit-js
---
import { LitElement, html, nothing } from "lit";

function _num(v, integer, min, max) {
  if (typeof v !== "number") return v;
  if (!Number.isFinite(v)) return undefined;
  if (integer) v = Math.round(v);
  if (min !== undefined) v = Math.max(v, min);
  if (max !== undefined) v = Math.min(v, max);
  return v;
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _numeric(v) {
  if (typeof v === "number") return Number.isFinite(v) ? v : undefined;
  if (typeof v === "string" && /^-?(?:\d+(?:\.\d+)?|\.\d+)(?:[eE][-+]?\d+)?$/.test(v.trim())) {
    const n = Number(v);
    return Number.isFinite(n) ? n : undefined;
  }
  return undefined;
}

function _tidy(x, ...inputs) {
  const d = (y) => {
    const [m = "", e] = String(y).split("e");
    return Math.max(0, (m.split(".")[1]?.length ?? 0) - (e === undefined ? 0 : Number(e)));
  };
  return Number(x.toFixed(Math.min(100, Math.max(...inputs.map(d)))));
}

function _bounds(min, max, step) {
  const lo = _numeric(min);
  const hi = _numeric(max);
  const st = _numeric(step);
  const b = { step: st !== undefined && st > 0 ? st : 1 };
  if (lo !== undefined) b.min = lo;
  if (hi !== undefined) b.max = lo === undefined ? hi : Math.max(hi, lo);
  return b;
}

function _clamp(v, b) {
  if (b.min !== undefined) v = Math.max(v, b.min);
  if (b.max !== undefined) v = Math.min(v, b.max);
  return v;
}

function _count(value, b) {
  return _clamp(_numeric(value) ?? 0, b);
}

function _step(current, direction, b) {
  return _tidy(_clamp(current + direction * b.step, b), current, b.step);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Order"
      ><label
        ><span aria-hidden="true">Quantity</span>${(() => {
          const _b = _bounds(1, 10, 1);
          return html`<span data-weft-stepper=""
              ><button type="button" tabindex=${-1} aria-hidden="true" data-weft-step="down" @click=${(_e) => { const _i = _e.currentTarget.parentElement?.querySelector("input"); const _n = _step(_numeric(_i?.value) ?? _count(_num(data?.quantity, false, undefined, undefined), _b), -1, _b); onChange?.("$.quantity", _n); _act(actions, { id: "quantity", action: "order.update" }); }}>${"−"}</button
              ><input data-weft-id="quantity" type="number" aria-label="Quantity" min=${(_b.min) ?? nothing} max=${(_b.max) ?? nothing} step=${(_b.step) ?? nothing} .value=${String(_count(_num(data?.quantity, false, undefined, undefined), _b))} @input=${(_e) => { const _v = _numeric(_e.currentTarget.value); if (_v !== undefined) onChange?.("$.quantity", _v); _act(actions, { id: "quantity", action: "order.update" }); }}
              ><button type="button" tabindex=${-1} aria-hidden="true" data-weft-step="up" @click=${(_e) => { const _i = _e.currentTarget.parentElement?.querySelector("input"); const _n = _step(_numeric(_i?.value) ?? _count(_num(data?.quantity, false, undefined, undefined), _b), 1, _b); onChange?.("$.quantity", _n); _act(actions, { id: "quantity", action: "order.update" }); }}>+</button
            ></span>`;
        })()}</label
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
