crates/weft-snapshots/tests/snapshots/lit-js/example-table.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-table as lit-js
---
import { LitElement, html, nothing } from "lit";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

function _list(v) {
  return Array.isArray(v) ? v : [];
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _press(e, fire) {
  if (e.target !== e.currentTarget || (e.key !== "Enter" && e.key !== " ")) return;
  e.preventDefault();
  fire();
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Orders">${(() => {
        const _cols = [
          html`<th data-weft-id="col-id" scope="col">Order</th>`,
          html`<th data-weft-id="col-total" scope="col" aria-sort="descending" tabindex=${0} @click=${() => _act(actions, { id: "col-total", action: "orders.sort" })} @keydown=${(_e) => _press(_e, () => _act(actions, { id: "col-total", action: "orders.sort" }))}>Total</th>`,
          ..._list(data?.orders).flatMap((order, _i0) => []),
        ];
        const _rows = [
          ..._list(data?.orders).flatMap((order, _i0) => [
            html`<tr data-weft-id=${"order-row[" + _i0 + "]"} aria-selected="false"
                ><td data-weft-id=${"order-id[" + _i0 + "]"}
                  ><div data-weft-id=${"order-id-text[" + _i0 + "]"}>${!(_text(order?.id).trim() === "") ? _squash(_text(order?.id)) : ""}</div
                ></td
                ><td data-weft-id=${"order-total[" + _i0 + "]"}
                  ><div data-weft-id=${"order-total-text[" + _i0 + "]"}>${!(_text(order?.total).trim() === "") ? _squash(_text(order?.total)) : ""}</div
                ></td
              ></tr>`,
          ]),
        ];
        return html`<table data-weft-id="orders" data-state="ready" aria-label="Recent orders">${_cols.length > 0 ? html`<thead
                ><tr>${_cols}</tr
              ></thead>` : null}${!(_list(data?.orders).length > 0) ? html`<tbody
                ><tr data-weft-slot="empty"
                  ><td colspan=${(Math.max(1, _cols.length)) ?? nothing}
                    ><div data-weft-id="orders-empty">No orders yet.</div
                    ><button data-weft-id="orders-shop" type="button" @click=${(_e) => _act(actions, { id: "orders-shop", action: "nav.shop" })}>Start shopping</button
                  ></td
                ></tr
              ></tbody>` : _rows.length > 0 ? html`<tbody>${_rows}</tbody>` : null}</table>`;
      })()}</main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
